--- a/c.html
+++ b/c.html
@@ -37,9 +37,9 @@ body {
 
 <div align=center class="topnav">
  <a class="active" href="homepage.html" target="body2">MyFavoriteCoursesBottomNav-WithDiff-Matting</a>
-  <a href="https://www.fieldstonegolf.com/" target="body2">Fieldstone</a>
+  <a href="https://youtu.be/oaUj5tYciIA" target="body2">Fieldstone</a>
   <a href="https://www.shoalcreekclub.com/club/scripts/library/view_document.asp?NS=PG&DN=CHAMPS#content" target="body2">Shoal Creek</a>
-  <a href="https://east01.glocation.info/w/?page_id=44" target="body2">Crooked Stick</a>
+  <a href="https://youtu.be/c9-4lxxTn9o" target="body2">Crooked Stick</a>
   <a href="https://east01.glocation.info/w/?p=57" target="body2">Merion</a>
   <a href="https://east01.glocation.info/w/?page_id=48" target="body2">Arronomink</a>
   <a href="https://east01.glocation.info/w/?p=60" target="body2">Long Bay</a>
