--- a/header.html
+++ b/header.html
@@ -39,11 +39,14 @@ body {
 <a class="logo" href="#home"><img src="logo.png"></a> 
  <a class="active" href="homepage.html" target="body2">Home</a>
   <a href="https:\\www.reuters.com" target="body2">News</a>
-  <a href="contact.html" target="body2">Contact</a>
-  <a href="about.html" target="body2">About</a>
-  <a href="./w/index.html" target="body2">Wordpress</a>
-  <a href="./h/index.html" target="body2">Joomla</a>
-  <a href="./h/c2.html" target="body2">Gallery</a>
+  <a href="contact.html" target="body2">BuildContact</a>
+  <a href="about.html" target="body2">BuildAbout</a>
+  <a href="./w2/index.php" target="body2">CorpWordpressShop</a>
+  <a href="./w3/index.php" target="body2">CorpWordpressForums</a>
+  <a href="./w/index.php" target="body2">CorpWordressMagazine</a>
+  <a href="./h/index.php" target="body2">CorpJoomlaSSO</a>
+ <a href="./cms/index.php" target="body2">CorpDrupal</a>
+ <a href="./shop/index.php" target="body2">AbanteCart</a>
 </div>
 
 <div style="padding-left:16px">
