--- a/footer.html
+++ b/footer.html
@@ -9,17 +9,24 @@
 a {
     color: black;
 }
-        </style>
+	p { font-size: 0.875em;}
+	
+	
+	</style>
 </head>
 <body bgcolor="Black">
-<table align="center" height="30" style="background-color: rgb(0, 0, 0);">
+	<table align="center" height="30" style="background-color: rgb(0, 0, 0);">
         <tbody>
                 <tr>
-                        <td style="text-align: center; width: 940px; height: 40pp
-x;"><img src="logo.png" style="width: 38px; height: 38px;" /></tdd
->
+			<td><a href="./fusionadmin/resetcache.html" target="body2"><font color=green size=1>Reset Cache</a></font></td>
+			<td style="text-align: center; width: 940px; height: 40pp
+x;"><img src="logo.png" style="width: 38px; height: 38px;" /></td
+><td><a href="./fusionadmin/" target="body2"><font color=green size=1>Admin Links</a></font></td>
                 </tr>
         </tbody>
 </table>
+<BR>
+<BR>
+<div align=center><a href="https://www.greenvilleassociates.com/fusionpro/fusionadmin/" target=body2><font color=green size=1>Administration Tools & Browser Reset</font></a></div>
 </body>
 </html>
